# work-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README-en.md  README.md
.claude/agents/: newapi-dev.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: AGENTS.md  api.rs  assets.rs  cache.rs  config.rs  error.rs  main.rs  models.rs  period.rs  repo.rs
deploy/: work-dashboard.service
frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: AGENTS.md  App.tsx  api.ts  format.ts  main.tsx  styles.css  theme.tsx  vite-env.d.ts
frontend/src/components/: date-time-range-picker.tsx  filter-combobox.tsx  theme-toggle.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  popover.tsx  table.tsx  tabs.tsx
